[gd_scene load_steps=3 format=3 uid="uid://cxwd6hn5vdqpf"]

[ext_resource type="Script" uid="uid://chjp66bypnksj" path="res://Scripts/Tutorial/tutorial_ui.gd" id="1_j40wu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ythbg"]
bg_color = Color(0, 0, 0, 1)

[node name="Tutorial" type="Node"]

[node name="TutorialUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_j40wu")

[node name="BlackBackground" type="Panel" parent="TutorialUI"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ythbg")

[node name="StoryLabel" type="Label" parent="TutorialUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -35.0
offset_right = 73.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "You wake up in a wooden chalet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressAIntructionLabel" type="Label" parent="TutorialUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -243.0
offset_top = -45.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Press A or Q to continue"

[node name="PressAInstructionAppearTimer" type="Timer" parent="TutorialUI"]
one_shot = true

[connection signal="timeout" from="TutorialUI/PressAInstructionAppearTimer" to="TutorialUI" method="_on_press_a_instruction_appear_timer_timeout"]
